--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
-	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
+	          <!-- <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li> -->
 	          <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
 	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
 	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
@@ -46,6 +46,7 @@
 	      </div>
 	    </div>
 	  </nav>
+	  <!------------------------------- HOME VIEW --------------------------------->
 	  <section id="home-section" class="hero">
 		  <div class="home-slider  owl-carousel">
 	      <div class="slider-item ">
@@ -66,8 +67,8 @@
 	        	</div>
 	        </div>
 	      </div>
-
-	      <div class="slider-item">
+			<!------------------------------- SLIDER VIEW --------------------------------->
+	      <!-- <div class="slider-item">
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
@@ -83,10 +84,10 @@
 		          </div>
 	        	</div>
 	        </div>
-	      </div>
+	      </div> -->
 	    </div>
     </section>
-
+	<!-------------------------- ABOUT SECTION ------------------------------>
     <section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
     	<div class="container">
     		<div class="row d-flex">
@@ -102,7 +103,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>I am Viren Sompura, a passionate Robotic Engineer with expertise in ROS/ROS2, robotics systems, and software development...</p>
+		            <p>I am Viren Sompura, Seeking a challenging position as a ROS Engineer or Robotics Software Engineer where I can leverage my expertise in ROS/ROS2, robotics systems, and software development to contribute to innovative robotics solutions.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Viren Sompura</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>January 28, 1999</span></li>
@@ -116,17 +117,17 @@
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
               	<p class="mb-4">
-	                <span class="number" data-number="120">0</span>
+	                <span class="number" data-number="5">0</span>
 	                <span>Project complete</span>
                 </p>
-                <p><a href="./resource/Viren_Resume.pdf" class="btn btn-primary py-3 px-3" download="newfilename">Download CV</a></p>
+                <p><a href="./resource/Viren_Resume.pdf" class="btn btn-primary py-3 px-3" download="Viren_Resume">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
         </div>
     	</div>
     </section>
-
+	<!------------------------------- RESUME SECTION --------------------------------->
     <section class="ftco-section ftco-no-pb" id="resume-section">
     	<div class="container">
     		<div class="row justify-content-center pb-5">
@@ -139,55 +140,55 @@
     		<div class="row">
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Master Degree of Design</h2>
-    					<span class="position">Cambridge University</span>
+    					<span class="date">Sept 2023-Present</span>
+    					<h2>Robotic Engineer</h2>
+    					<span class="position">Vama Communication Pvt. Ltd.</span>
+    					<p class="mt-4">Spearheading the development of Curio Robot’s hardware and software in the R&D department. Improving and implementing ROS2-based Navigation annd SLAM on Jetson Nano.</p>
+    				</div>
+    				<div class="resume-wrap ftco-animate">
+    					<span class="date">Sept 2021-Aug 2023</span>
+    					<h2>Masters in Robotics Engineering</h2>
+    					<span class="position">M.S. Ramaiah University of Applied Science </span>
     					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Bachelor's Degree of C.A</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-    				</div>
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Diploma in Computer</h2>
-    					<span class="position">Cambridge University</span>
+    					<span class="date">Aug 2016-Aug 2020</span>
+    					<h2>Bachalor's in Mechatronics Enginnering</h2>
+    					<span class="position">Sal College of Engineering</span>
     					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
     				</div>
     			</div>
 
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Art &amp; Creative Director</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    					<span class="date">April 2023-July 2023</span>
+    					<h2>Intern</h2>
+    					<span class="position">Fenwick and Ravi(F.A.R.)</span>
+    					<p class="mt-4">Developed Tkinter GUI software for a AS/RS Radio Shuttle. Created an Autonomous Mobile Robot using ROS2 framework and implementing custom navigation algorithm.</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Wordpress Developer</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    					<span class="date">Sept 2020-March 2021</span>
+    					<h2>Engineer Trainee</h2>
+    					<span class="position">Raicam Automotive Private Limited </span>
+    					<p class="mt-4">Contributed to the production of Clutch Actuation systems, focusing on Clutch Master Cylinder and Concentric Slave Cylinder development. Implemented process improvements that increased production efficiency by 15%</p>
     				</div>
-    				<div class="resume-wrap ftco-animate">
+    				<!-- <div class="resume-wrap ftco-animate">
     					<span class="date">2017-2018</span>
     					<h2>UI/UX Designer</h2>
     					<span class="position">Cambridge University</span>
     					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-    				</div>
+    				</div> -->
     			</div>
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="./resource/Viren_Resume.pdf" class="btn btn-primary py-4 px-5" download="Viren_Resume">Download CV</a></p>
     			</div>
     		</div>
     	</div>
     </section>
-
-    <section class="ftco-section" id="services-section">
+	<!---------------------------------------------- Service Section ------------------------------------------------------>
+    <!-- <section class="ftco-section" id="services-section">
     	<div class="container">
     		<div class="row justify-content-center py-5 mt-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
@@ -260,9 +261,9 @@
 					</div>
 				</div>
     	</div>
-    </section>
+    </section> -->
 
-		
+		<!--------------------------------------- Skill Section ------------------------------------------->
 		<section class="ftco-section" id="skills-section">
 			<div class="container">
 				<div class="row justify-content-center pb-5">
@@ -286,6 +287,39 @@
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
+							<h3>Autonomous Navigation</h3>
+							<div class="progress">
+							 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
+							  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
+							    <span>90%</span>
+							  	</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box">
+						<div class="progress-wrap ftco-animate">
+							<h3>SLAM</h3>
+							<div class="progress">
+							 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
+							  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
+							    <span>75%</span>
+							  	</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box">
+						<div class="progress-wrap ftco-animate">
+							<h3>Sensor Fusion and Sensor Integration</h3>
+							<div class="progress">
+							 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
+							  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
+							    <span>85%</span>
+							  	</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box">
+						<div class="progress-wrap ftco-animate">
 							<h3>Python</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="85"
@@ -300,7 +334,7 @@
 							<h3>C/C++</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="95"
-							  	aria-valuemin="0" aria-valuemax="100" style="width:95%">
+							  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
 							    <span>75%</span>
 							  	</div>
 							</div>
@@ -308,7 +342,7 @@
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
-							<h3>CSS3</h3>
+							<h3>Robot Hardware and Software Integration</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -319,18 +353,18 @@
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
-							<h3>WordPress</h3>
+							<h3>Version Control (Git)</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
-							  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-							    <span>70%</span>
+							  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
+							    <span>85%</span>
 							  	</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
-							<h3>SEO</h3>
+							<h3>Linux System</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -339,46 +373,57 @@
 							</div>
 						</div>
 					</div>
+					<div class="col-md-6 animate-box">
+						<div class="progress-wrap ftco-animate">
+							<h3>Embedded System Programming</h3>
+							<div class="progress">
+							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
+							  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
+							    <span>75%</span>
+							  	</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
  
-
+	<!------------------------------------------------------ Project Section ------------------------------------------------------>
     <section class="ftco-section ftco-project" id="projects-section">
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Projects</h1>
-            <h2 class="mb-4">Our Projects</h2>
+            <h2 class="mb-4">Projects</h2>
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
           </div>
         </div>
     		<div class="row">
     			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/1.jpeg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a href="https://drive.google.com/file/d/1SGBgsC9yg2MlOd70hP9E2P-MdjG-vpHD/view?usp=sharing">Curio: Museum Guidance Robot</a></h3>
+	    					<span>Mobile Robot</span>
 	    				</div>
     				</div>
   				</div>
   				<div class="col-md-8">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/3.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a href="https://drive.google.com/drive/folders/1bC7ev7NMXQ1dkGp74KphR3cCT3R6wxd7?usp=sharing">Autonomous Mobile Robot with LiDAR  &amp; A* Search Algorithm</a></h3>
+	    					<span>Mobile Robot</span>
 	    				</div>
     				</div>
   				</div>
 
     			<div class="col-md-8">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-1.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/4.PNG);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a href="https://drive.google.com/drive/folders/1-N_lamHz9trtk43rRTvo55dQXPBXFD0H?usp=sharing">ROS2 Sensor Integration &amp; Driver Development</a></h3>
+	    					<span>Sensor Fusion and Integration</span>
 	    				</div>
     				</div>
 
@@ -620,10 +665,10 @@
               <h2 class="ftco-heading-2">About</h2>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-				<li class="ftco-animate"><a href="#"><span class="icon-github"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-linkedin"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+				<li class="ftco-animate"><a href="https://github.com/virensompura"><span class="icon-github"></span></a></li>
+                <li class="ftco-animate"><a href="https://x.com/VirenSompura01"><span class="icon-twitter"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.linkedin.com/in/viren-sompura/"><span class="icon-linkedin"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.instagram.com/virensompura/?hl=en"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
           </div>
@@ -656,9 +701,9 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">26, Binori Rosella, Nr. Aarohi Club Road, Ghuma, Ahmedabad- 380058</span></li>
+	                <li><a href="tel:+919825885177"><span class="icon icon-phone"></span><span class="text">+91-9825885177</span></a></li>
+	                <li><a href="mailto:sompuraviren03@gmail.com"><span class="icon icon-envelope"></span><span class="text">sompuraviren03@gmail.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -668,7 +713,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved 
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
